--- a/index.html
+++ b/index.html
@@ -3,11 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Tic Tac Toe</title>
   </head>
 
   <body>
+    <div class="player-container">
+      <div class="player player-1">
+        <div class="player-name">Alex</div>
+        <div class="player-score">2</div>
+      </div>
+      <div class="player player-2">
+        <div class="player-name">Bob</div>
+        <div class="player-score">0</div>
+      </div>
+    </div>
+    <main class="board">
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+    </main>
+    <footer class="footer">
+      <span>
+        <p>
+          Made by <a href="https://github.com/aaksant/tic-tac-toe">aaksant</a>
+        </p>
+      </span>
+    </footer>
 
     <script src="main.js"></script>
   </body>
