--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
   </head>
 
   <body>
-    <div class="player-container">
-      <div class="player player-1">
-        <div class="player-name">Alex</div>
-        <div class="player-score">0</div>
+    <div class="header">
+      <div class="player-container">
+        <div class="player player-1">
+          <div class="player-name">X</div>
+          <div class="player-score x">0</div>
+        </div>
+        <div class="player player-2">
+          <div class="player-name">O</div>
+          <div class="player-score o">0</div>
+        </div>
       </div>
-      <div class="player player-2">
-        <div class="player-name">Bob</div>
-        <div class="player-score">0</div>
+      <div class="message-container">
+        <span class="message">X's turn</span>
       </div>
     </div>
     <main class="board">
