Add initial player dialog structure

--- a/index.html
+++ b/index.html
@@ -41,6 +41,21 @@
         </p>
       </span>
     </footer>
+    <dialog id="dialog">
+      <form method="dialog" id="playerDialog">
+        <div class="form-row">
+          <label for="player1">PLAYER X NAME</label>
+          <input type="text" name="player1" id="player1">
+        </div>
+        <div class="form-row">
+          <label for="player2">PLAYER O NAME</label>
+          <input type="text" name="player2" id="player2">
+        </div>
+        <div class="form-row">
+          <button class="btn" id="submitBtn">Let's play</button>
+        </div>
+      </form>
+    </dialog>
 
     <script src="main.js"></script>
   </body>
